<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.DetailsActivity">

    <data>
        <import type="android.view.View"/>
        <variable
            name="DetailsViewModel"
            type="com.draw.suckhoe.view.viewModels.DetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintDetailBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingTop="@dimen/_10sdp"
            android:background="@color/green"
            android:paddingBottom="@dimen/_10sdp">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/arrow_back"
                android:layout_marginStart="@dimen/_10sdp"
                android:contentDescription="@string/back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="@{()->DetailsViewModel.onClickBack()}"/>

            <TextView
                android:id="@+id/tvActivityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{DetailsViewModel.title}"
                style="@style/whiteText"
                android:textSize="@dimen/_16ssp"
                android:layout_marginStart="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnBack"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imvSwap"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvActivityTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/baseline_swap_horiz_24"/>

            <ImageView
                android:id="@+id/timer"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/clock_alarm"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/hen_gio"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/xong"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/xoa_delete"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/constraintDetailBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <FrameLayout
                android:id="@+id/frame_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvAddNewRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/them_ban_ghi"
            android:textColor="@color/white"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textAlignment="center"
            android:backgroundTint="@color/green"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/custom_bottom_nav"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>