<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewReminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="@dimen/_5sdp">

                <ImageView
                    android:id="@+id/imvLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:src="@drawable/baseline_horizontal_rule_24"/>

                <TextView
                    android:id="@+id/tvDeleteReminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xoa"
                    android:background="@drawable/bg_text_2"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:paddingBottom="5sp"
                    android:backgroundTint="@color/red_primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/imvLine"
                    app:layout_constraintBottom_toBottomOf="@id/imvLine"/>

                <TextView
                    android:id="@+id/tvBotLayoutName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imvLine"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="Ghi lại lời nhắc cho Huyết áp"/>

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/wheelHour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:np_max="23"
                    app:np_min="0"
                    app:np_value="1"
                    app:np_selectedTextColor="@color/white"
                    app:np_formatter="@string/number_picker_formatter"
                    app:np_textColor="@color/white"
                    app:np_width="@dimen/_50sdp"
                    app:np_height="@dimen/_130sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:np_dividerColor="@color/white"
                    app:np_dividerLength="@dimen/_40sdp"
                    android:background="@drawable/custom_wheel"
                    android:backgroundTint="@color/green"
                    android:contentDescription="@string/gio"
                    app:layout_constraintTop_toBottomOf="@id/tvBotLayoutName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/wheelMinutes" />

                <com.shawnlin.numberpicker.NumberPicker
                    android:id="@+id/wheelMinutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:np_max="59"
                    app:np_min="0"
                    app:np_value="2"
                    app:np_selectedTextColor="@color/white"
                    app:np_formatter="@string/number_picker_formatter"
                    app:np_textColor="@color/white"
                    app:np_width="@dimen/_50sdp"
                    app:np_height="@dimen/_130sdp"
                    app:np_dividerColor="@color/white"
                    app:np_dividerLength="@dimen/_40sdp"
                    android:background="@drawable/custom_wheel"
                    android:backgroundTint="@color/green"
                    android:contentDescription="@string/gio"
                    app:layout_constraintTop_toTopOf="@id/wheelHour"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/wheelHour"
                    app:layout_constraintBottom_toBottomOf="@+id/wheelHour" />

                <TextView
                    android:id="@+id/tvRepeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lap_lai"
                    app:layout_constraintTop_toBottomOf="@id/wheelHour"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="10sp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintPickDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="10sp"
                    app:layout_constraintTop_toBottomOf="@id/tvRepeat">

                    <LinearLayout
                        android:id="@+id/layoutMon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/layoutTus"
                        app:layout_constraintTop_toTopOf="parent"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thu_2"
                            android:textSize="@dimen/_12ssp"/>

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkMon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:button="@drawable/custom_selector_checked"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutTus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        app:layout_constraintEnd_toStartOf="@id/layoutWed"
                        app:layout_constraintStart_toEndOf="@id/layoutMon"
                        app:layout_constraintTop_toTopOf="@id/layoutMon">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thu_3"
                            android:textSize="@dimen/_12ssp"/>

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkTus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:button="@drawable/custom_selector_checked"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutWed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        app:layout_constraintEnd_toStartOf="@id/layoutThu"
                        app:layout_constraintStart_toEndOf="@id/layoutTus"
                        app:layout_constraintTop_toTopOf="@id/layoutMon">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thu_4"
                            android:textSize="@dimen/_12ssp"/>

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkWed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:button="@drawable/custom_selector_checked"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/layoutThu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        app:layout_constraintEnd_toStartOf="@id/layoutFri"
                        app:layout_constraintStart_toEndOf="@id/layoutWed"
                        app:layout_constraintTop_toTopOf="@id/layoutMon">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thu_5"
                            android:textSize="@dimen/_12ssp"/>

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkThu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:button="@drawable/custom_selector_checked"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/layoutFri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        app:layout_constraintEnd_toStartOf="@id/layoutSat"
                        app:layout_constraintStart_toEndOf="@id/layoutThu"
                        app:layout_constraintTop_toTopOf="@id/layoutMon">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thu_6"
                            android:textSize="@dimen/_12ssp"/>

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkFri"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:button="@drawable/custom_selector_checked"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/layoutSat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        app:layout_constraintEnd_toStartOf="@id/layoutSun"
                        app:layout_constraintStart_toEndOf="@id/layoutFri"
                        app:layout_constraintTop_toTopOf="@id/layoutMon">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thu_7"
                            android:textSize="@dimen/_12ssp"/>

                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkSat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:button="@drawable/custom_selector_checked"/>

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/layoutSun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        app:layout_constraintStart_toEndOf="@id/layoutSat"
                        app:layout_constraintTop_toTopOf="@id/layoutMon"
                        app:layout_constraintEnd_toEndOf="parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chu_nhat"
                            android:textSize="@dimen/_12ssp"/>
                        <androidx.appcompat.widget.AppCompatCheckBox
                            android:id="@+id/checkSun"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:button="@drawable/custom_selector_checked"/>
                    </LinearLayout>
                    <TextView
                        android:id="@+id/tvConfirmReminder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/them_moi"
                        android:textColor="@color/white"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:textAlignment="center"
                        android:backgroundTint="@color/green"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/custom_bottom_nav"
                        app:layout_constraintTop_toBottomOf="@id/layoutSun"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>